Update the PRU GCC toolchain
This update is needed to allow loading of GCC-built PRU firmware by
mainline kernels 5.10 and later. I've tested on armhf bullseye chroot
with qemu, on amd64 host.

The necessary fixes for kernel 5.10 remoteproc are already merged
upstream:
  https://sourceware.org/pipermail/binutils/2021-September/118057.html
  https://sourceware.org/pipermail/binutils/2021-November/118668.html
  https://gcc.gnu.org/pipermail/gcc-patches/2021-December/586176.html

While waiting for the official Binutils 2.38 and GCC 12 releases, let's
use locally-generated snapshot tarballs. They have been created from
non-modified GIT HEADs of upstream development trees:
   binutils: commit 2749ac133972d027fe9482acc81f6e88c4f36812
   gcc: commit aeedb00a1ae2ccd10b1a5f00ff466081aeadb54b
I'll host those tarballs for at least one more year. By then we should
update to the official upstream releases.

One notable change is that now gnuprumcu package must be built last,
after binutils-pru and gcc-pru.

Signed-off-by: Dimitar Dimitrov <dimitar@dinux.eu>

--- a/binutils-pru/suite/bionic/debian/changelog
+++ b/binutils-pru/suite/bionic/debian/changelog
@@ -1,3 +1,11 @@
+binutils-pru (2.37.50.g2749ac13-0rcnee4~bionic+20200321) bionic; urgency=low
+
+  * Binutils 2.37.50, mainline commit 2749ac133972d027fe9482acc81f6e88c4f36812.
+  * Fix handling of .pri_irq_map section.
+  * Fix .resource_table section alignment for AM64x SoCs.
+
+ -- Dimitar Dimitrov <dimitar@dinux.eu>  Sun, 12 Dec 2021 20:54:12 +0200
+
 binutils-pru (2.34-0rcnee4~bionic+20200321) bionic; urgency=low
 
   * Rebuild for repos.rcn-ee.com
