--- a/gcc-pru/suite/bionic/debian/changelog
+++ b/gcc-pru/suite/bionic/debian/changelog
@@ -1,3 +1,9 @@
+gcc-pru (12.0.RC.gaeedb00a1a-0rcnee2~bionic+20200903) bionic; urgency=low
+
+  * Bump to GCC mainline commit aeedb00a1ae2ccd10b1a5f00ff466081aeadb54b.
+
+ -- Dimitar Dimitrov <dimitar@dinux.eu>  Sun, 12 Dec 2021 21:59:11 +0200
+
 gcc-pru (10.1.0-0rcnee2~bionic+20200903) bionic; urgency=low
 
   * Rebuild for repos.rcn-ee.com
