--- a/gnuprumcu/suite/bionic/debian/changelog
+++ b/gnuprumcu/suite/bionic/debian/changelog
@@ -1,3 +1,32 @@
+gnuprumcu (0.7.0) unstable; urgency=medium
+
+  * Add definitions for direct access to __R30 and __R31.
+
+ -- Dimitar Dimitrov <dimitar@dinux.eu>  Fri, 10 Dec 2021 22:16:58 +0200
+
+gnuprumcu (0.6.0) unstable; urgency=medium
+
+  * Require Binutils at least version 2.37.
+  * Require pru-gcc to be installed.
+  * Remove linker scripts. Instead set memory sizes from specs.
+  * Activate --gc-sections linker option by default.
+
+ -- Dimitar Dimitrov <dimitar@dinux.eu>  Fri, 24 Jul 2021 22:11:58 +0200
+
+gnuprumcu (0.5.0) unstable; urgency=medium
+
+  * Add TDA4VM device specs and linker scripts.
+
+ -- Dimitar Dimitrov <dimitar@dinux.eu>  Fri, 15 Jan 2021 21:18:27 +0200
+
+gnuprumcu (0.4.0) unstable; urgency=medium
+
+  * Added am65x linker scripts.
+  * Fixed am572x device spec names.
+  * Fixed am437x IMEM size for ICSS1.
+
+ -- Dimitar Dimitrov <dimitar@dinux.eu>  Sat, 28 Nov 2020 10:02:00 +0200
+
 gnuprumcu (0.3.0-git20200828.0-0rcnee0~bionic+20200903) bionic; urgency=low
 
   * Rebuild for repos.rcn-ee.com
