--- a/bb-customizations/suite/bullseye/debian/install
+++ b/bb-customizations/suite/bullseye/debian/install
@@ -2,6 +2,7 @@ debian/10-of-symlink.rules /etc/udev/rules.d/
 debian/80-i2c-noroot.rules /etc/udev/rules.d/
 debian/86-remoteproc-noroot.rules /etc/udev/rules.d/
 debian/87-iio-noroot.rules /etc/udev/rules.d/
+debian/88-leds-noroot.rules /etc/udev/rules.d/
 debian/ti_pru_firmware /usr/share/initramfs-tools/hooks/
 debian/zz-uenv_txt /etc/kernel/postinst.d/
 debian/am335x-pru0-fw.sleep /lib/firmware/
