--- a/bb-wl18xx-firmware/suite/buster/debian/install
+++ b/bb-wl18xx-firmware/suite/buster/debian/install
@@ -3,6 +3,7 @@ debian/wl18xx-conf.bin /lib/firmware/ti-connectivity/
 debian/wl18xx-fw-4.bin /lib/firmware/ti-connectivity/git/
 debian/btwilink-blacklist.conf /etc/modprobe.d/
 debian/wl18xx.conf /etc/modprobe.d/
+debian/bb-fixup-bluetooth /usr/bin/
 debian/bb-wl18xx-bluetooth /usr/bin/
 debian/bb-wl18xx-bluetooth.service /lib/systemd/system/
 debian/bb-wl18xx-wlan0 /usr/bin/
