binutils-pru (2.37.50.g2749ac13-0rcnee2)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/binutils-pru-debian-11-ubuntu-2004/suite/bullseye/debian/changelog
+++ b/binutils-pru-debian-11-ubuntu-2004/suite/bullseye/debian/changelog
@@ -1,3 +1,9 @@
+binutils-pru (2.37.50.g2749ac13-0rcnee2~bullseye+20211223) bullseye; urgency=low
+
+  * Rebuild for repos.rcn-ee.com
+
+ -- Robert Nelson <robertcnelson@gmail.com>  Thu, 23 Dec 2021 14:53:33 -0600
+
 binutils-pru (2.37.50.g2749ac13-0rcnee1~bullseye+20211223) bullseye; urgency=low
 
   * Rebuild for repos.rcn-ee.com
