--- a/bb-simppru/suite/bullseye/debian/changelog
+++ b/bb-simppru/suite/bullseye/debian/changelog
@@ -1,4 +1,4 @@
-bb-simppru (1.4.20211012.1-0~buster+20211228) buster; urgency=low
+bb-simppru (1.4.20211012.1-0~bullseye+20211228) bullseye; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
