galcore-headers (4.6.6.1381-0rcnee5)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/etnaviv-01-galcore-headers/suite/bullseye/debian/changelog
+++ b/etnaviv-01-galcore-headers/suite/bullseye/debian/changelog
@@ -1,4 +1,4 @@
-galcore-headers (4.6.6.1381-0rcnee5~focal+20211229) focal; urgency=low
+galcore-headers (4.6.6.1381-0rcnee5~bullseye+20211229) bullseye; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
