--- a/etnaviv-02-libetnaviv/suite/bullseye/debian/changelog
+++ b/etnaviv-02-libetnaviv/suite/bullseye/debian/changelog
@@ -1,4 +1,4 @@
-libetnaviv (0.0.0-git20141102.2-0~focal+20211229) focal; urgency=low
+libetnaviv (0.0.0-git20141102.2-0~bullseye+20211229) bullseye; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
