libdrm-armada (2.0.3-git20180720.1)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/etnaviv-03-libdrm-armada/suite/bullseye/debian/changelog
+++ b/etnaviv-03-libdrm-armada/suite/bullseye/debian/changelog
@@ -1,4 +1,4 @@
-libdrm-armada (2.0.3-git20180720.1-0~buster+20211229) buster; urgency=low
+libdrm-armada (2.0.3-git20180720.1-0~bullseye+20211229) bullseye; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
