xf86-video-armada (0.0.1-r16-git20190518.1)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/etnaviv-04-xf86-video-armada/suite/bullseye/debian/changelog
+++ b/etnaviv-04-xf86-video-armada/suite/bullseye/debian/changelog
@@ -1,4 +1,4 @@
-xf86-video-armada (0.0.1-r16-git20190518.1-0~buster+20211229) buster; urgency=low
+xf86-video-armada (0.0.1-r16-git20190518.1-0~bullseye+20211229) bullseye; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
