--- a/bb-beagle-flasher/suite/buster/debian/changelog
+++ b/bb-beagle-flasher/suite/buster/debian/changelog
@@ -1,4 +1,4 @@
-bb-beagle-flasher (1.20220102.0-0~bullseye+20220102) bullseye; urgency=low
+bb-beagle-flasher (1.20220102.0-0~buster+20220102) buster; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
