--- a/bb-beagle-version/suite/buster/debian/changelog
+++ b/bb-beagle-version/suite/buster/debian/changelog
@@ -1,4 +1,4 @@
-bb-beagle-version (1.20210928.2-0~focal+20220102) focal; urgency=low
+bb-beagle-version (1.20210928.2-0~buster+20220102) buster; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
