--- a/debian-11-cockpit/suite/bullseye/debian/changelog
+++ b/debian-11-cockpit/suite/bullseye/debian/changelog
@@ -1,14 +1,18 @@
-cockpit (259-1rcnee1~bullseye+20211231) bullseye; urgency=low
+cockpit (260-1rcnee0~bullseye+20220109) bullseye; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
- -- Robert Nelson <robertcnelson@gmail.com>  Fri, 31 Dec 2021 09:39:07 -0600
+ -- Robert Nelson <robertcnelson@gmail.com>  Sun, 09 Jan 2022 13:52:52 -0600
 
-cockpit (259-1rcnee0~bullseye+20211213) bullseye; urgency=low
+cockpit (260-1) unstable; urgency=medium
 
-  * Rebuild for repos.rcn-ee.com
+  * New upstream release:
+    - Certificate login validation: Action required on updates
+    - Client: Show previously used hosts
+    - Client: Support port specification
+    - bridge: Warning on missing cockpit-system package
 
- -- Robert Nelson <robertcnelson@gmail.com>  Mon, 13 Dec 2021 09:53:07 -0600
+ -- Martin Pitt <mpitt@debian.org>  Thu, 06 Jan 2022 12:35:11 +0100
 
 cockpit (259-1) unstable; urgency=medium
 
