--- a/git-uMTP-Responder/suite/bullseye/debian/changelog
+++ b/git-uMTP-Responder/suite/bullseye/debian/changelog
@@ -1,12 +1,6 @@
-umtp-responder (1.4.3-git20210912.0-0rcnee0~bullseye+20211008) bullseye; urgency=low
+umtp-responder (1.6.2-git20211226.1-0~bullseye+20220112) bullseye; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
- -- Robert Nelson <robertcnelson@gmail.com>  Fri, 08 Oct 2021 13:04:33 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Wed, 12 Jan 2022 15:40:38 -0600
 
-umtp-responder (1.3.10-1) unstable; urgency=medium
-
-  [ Arnaud Ferraris ]
-  * Initial Debian release (Closes: #974346)
-
- -- Federico Ceratto <federico@debian.org>  Wed, 25 Nov 2020 14:45:50 +0000
