--- a/bb-customizations/suite/bullseye/debian/install
+++ b/bb-customizations/suite/bullseye/debian/install
@@ -13,3 +13,7 @@ debian/am57xx-pru1_0-fw.sleep /lib/firmware/
 debian/am57xx-pru1_1-fw.sleep /lib/firmware/
 debian/am57xx-pru2_0-fw.sleep /lib/firmware/
 debian/am57xx-pru2_1-fw.sleep /lib/firmware/
+debian/beaglebg.jpg /usr/share/backgrounds/bbb.io/
+debian/beagleboard-logo.svg /usr/share/backgrounds/bbb.io/
+debian/xfce4-desktop.xml /etc/bbb.io/templates/xfce4/
+debian/ssh.service /etc/avahi/services/
