--- a/debian-11-cockpit/suite/bullseye/debian/changelog
+++ b/debian-11-cockpit/suite/bullseye/debian/changelog
@@ -1,8 +1,16 @@
-cockpit (260-1rcnee0~bullseye+20220109) bullseye; urgency=low
+cockpit (261-1rcnee0~bullseye+20220125) bullseye; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
- -- Robert Nelson <robertcnelson@gmail.com>  Sun, 09 Jan 2022 13:52:52 -0600
+ -- Robert Nelson <robertcnelson@gmail.com>  Tue, 25 Jan 2022 17:07:01 -0600
+
+cockpit (261-1) unstable; urgency=medium
+
+  * New upstream release:
+    - storage: Unmounting or deleting a busy filesystem is now supported
+    - shell: Allow adding ssh keys with passphrase
+
+ -- Martin Pitt <mpitt@debian.org>  Mon, 24 Jan 2022 17:49:33 +0100
 
 cockpit (260-1) unstable; urgency=medium
 
