--- a/bbb.io-beagleconnect-msp430/suite/bullseye/debian/install
+++ b/bbb.io-beagleconnect-msp430/suite/bullseye/debian/install
@@ -1,4 +1,16 @@
 /usr/lib/python2.7/dist-packages/msp430/* /usr/lib/python2.7/dist-packages/
 /usr/lib/python2.7/dist-packages/python_msp430_tools-0.6.1.egg-info /usr/lib/python2.7/dist-packages/
-/usr/bin/msp430* /usr/bin/
-
+/usr/bin/msp430-jtag /usr/bin/
+/usr/bin/msp430-gdb /usr/bin/
+/usr/bin/msp430-bsl-legacy /usr/bin/
+/usr/bin/msp430-convert /usr/bin/
+/usr/bin/msp430-downloader /usr/bin/
+/usr/bin/msp430-bsl /usr/bin/
+/usr/bin/msp430-generate /usr/bin/
+/usr/bin/msp430-hexdump /usr/bin/
+/usr/bin/msp430-bsl-fcdprog /usr/bin/
+/usr/bin/msp430-compare /usr/bin/
+/usr/bin/msp430-bsl-telosb /usr/bin/
+/usr/bin/msp430-tool /usr/bin/
+/usr/bin/msp430-jtag-legacy /usr/bin/
+/usr/bin/msp430-ram-usage /usr/bin/
