--- a/bbb.io-beagleconnect-msp430/suite/bullseye/debian/install
+++ b/bbb.io-beagleconnect-msp430/suite/bullseye/debian/install
@@ -1,15 +1,2 @@
-/usr/lib/python2.7/dist-packages/msp430/* /usr/lib/python2.7/dist-packages/
-/usr/bin/msp430-jtag /usr/bin/
-/usr/bin/msp430-gdb /usr/bin/
-/usr/bin/msp430-bsl-legacy /usr/bin/
-/usr/bin/msp430-convert /usr/bin/
-/usr/bin/msp430-downloader /usr/bin/
-/usr/bin/msp430-bsl /usr/bin/
-/usr/bin/msp430-generate /usr/bin/
-/usr/bin/msp430-hexdump /usr/bin/
-/usr/bin/msp430-bsl-fcdprog /usr/bin/
-/usr/bin/msp430-compare /usr/bin/
-/usr/bin/msp430-bsl-telosb /usr/bin/
-/usr/bin/msp430-tool /usr/bin/
-/usr/bin/msp430-jtag-legacy /usr/bin/
-/usr/bin/msp430-ram-usage /usr/bin/
+#/usr/lib/python2.7/dist-packages/msp430/* /usr/lib/python2.7/dist-packages/
+ti_msp430_python_tools/python-msp430-tools/build/scripts-2.7/* /usr/bin/
