--- a/bbb.io-beagleconnect-msp430/suite/bullseye/debian/install
+++ b/bbb.io-beagleconnect-msp430/suite/bullseye/debian/install
@@ -1,2 +1,2 @@
-#/usr/lib/python2.7/dist-packages/msp430/* /usr/lib/python2.7/dist-packages/
+/usr/lib/python2.7/dist-packages/msp430/* /usr/lib/python2.7/dist-packages/
 ti_msp430_python_tools/python-msp430-tools/build/scripts-2.7/* /usr/bin/
