--- a/bbb.io-beagleconnect-msp430/suite/bullseye/debian/install
+++ b/bbb.io-beagleconnect-msp430/suite/bullseye/debian/install
@@ -1,3 +1,3 @@
-/usr/lib/python2.7/site-packages/msp430/* /usr/lib/python2.7/dist-packages/
-/usr/lib/python2.7/site-packages/python_msp430_tools-0.6.1-py2.7.egg-info /usr/lib/python2.7/dist-packages/
+usr/lib/python2.7/site-packages/msp430/* /usr/lib/python2.7/dist-packages/
+usr/lib/python2.7/site-packages/python_msp430_tools-0.6.1-py2.7.egg-info /usr/lib/python2.7/dist-packages/
 ti_msp430_python_tools/python-msp430-tools/build/scripts-2.7/* /usr/bin/
