--- a/bbb.io-beagleconnect-msp430/suite/bullseye/debian/install
+++ b/bbb.io-beagleconnect-msp430/suite/bullseye/debian/install
@@ -1,2 +1,2 @@
-tmp/lib/python2.7/site-packages/* /usr/lib/python2.7/dist-packages/
-tmp/bin/* /usr/bin/
+ti_msp430_python_tools/python-msp430-tools/tmp/lib/python2.7/site-packages/* /usr/lib/python2.7/dist-packages/
+ti_msp430_python_tools/python-msp430-tools/tmp/bin/* /usr/bin/
