--- a/bbb.io-beagleconnect-msp430/suite/buster/debian/changelog
+++ b/bbb.io-beagleconnect-msp430/suite/buster/debian/changelog
@@ -1,4 +1,4 @@
-beagleconnect-msp430 (1.20220128.13-0~bullseye+20220128) bullseye; urgency=low
+beagleconnect-msp430 (1.20220128.13-0~buster+20220128) buster; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
