--- a/debian-11-cockpit/suite/bullseye/debian/changelog
+++ b/debian-11-cockpit/suite/bullseye/debian/changelog
@@ -1,8 +1,16 @@
-cockpit (261-1rcnee0~bullseye+20220125) bullseye; urgency=low
+cockpit (262-1rcnee0~bullseye+20220205) bullseye; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
- -- Robert Nelson <robertcnelson@gmail.com>  Tue, 25 Jan 2022 17:07:01 -0600
+ -- Robert Nelson <robertcnelson@gmail.com>  Sat, 05 Feb 2022 10:52:24 -0600
+
+cockpit (262-1) unstable; urgency=medium
+
+  * New upstream release:
+    - Overview: Show scheduled shutdowns
+    - Networking: Add firewall service description
+
+ -- Martin Pitt <mpitt@debian.org>  Wed, 02 Feb 2022 14:36:39 +0100
 
 cockpit (261-1) unstable; urgency=medium
 
