binutils-pru: Bump to official 2.38 release
Not much changes affecting the PRU backend.

Signed-off-by: Dimitar Dimitrov <dimitar@dinux.eu>

--- a/binutils-pru/suite/stretch/debian/changelog
+++ b/binutils-pru/suite/stretch/debian/changelog
@@ -1,3 +1,9 @@
+binutils-pru (2.38-0rcnee4~bionic+20200321) stretch; urgency=low
+
+  * Binutils 2.38 official release.
+
+ -- Dimitar Dimitrov <dimitar@dinux.eu>  Sun, 13 Feb 2022 15:24:12 +0200
+
 binutils-pru (2.37.50.g2749ac13-0rcnee4~stretch+20200321) stretch; urgency=low
 
   * Binutils 2.37.50, mainline commit 2749ac133972d027fe9482acc81f6e88c4f36812.
