bbb.io-xfce4-desktop (1.20220216.2)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-xfce4-desktop/suite/bullseye/debian/install
+++ b/bbb.io-xfce4-desktop/suite/bullseye/debian/install
@@ -1,2 +1,3 @@
 debian/armada.xorg.conf /etc/bbb.io/templates/
 debian/fbdev.xorg.conf /etc/bbb.io/templates/
+debian/modesetting.xorg.conf /etc/bbb.io/templates/
