--- a/SanCloud-Firmware/suite/bullseye/debian/install
+++ b/SanCloud-Firmware/suite/bullseye/debian/install
@@ -1,2 +1,2 @@
-debian/*.bin /lib/firmware/qca6174a/
-debian/*.ini /lib/firmware/qca6174a/wlan/
+debian/*.bin /lib/firmware/
+debian/*.ini /lib/firmware/wlan/
