--- a/debian-11-libiio/suite/bullseye/debian/changelog
+++ b/debian-11-libiio/suite/bullseye/debian/changelog
@@ -1,8 +1,14 @@
-libiio (0.23-1rcnee0~bullseye+20211111) bullseye; urgency=low
+libiio (0.23-2rcnee0~bullseye+20220217) bullseye; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
- -- Robert Nelson <robertcnelson@gmail.com>  Thu, 11 Nov 2021 11:43:16 -0600
+ -- Robert Nelson <robertcnelson@gmail.com>  Thu, 17 Feb 2022 13:30:55 -0600
+
+libiio (0.23-2) unstable; urgency=medium
+
+  * update to v0.23-26-gfbf5adb2
+
+ -- A. Maitland Bottoms <bottoms@debian.org>  Sat, 27 Nov 2021 19:41:07 -0500
 
 libiio (0.23-1) experimental; urgency=medium
 
