--- a/debian-11-cockpit/suite/bullseye/debian/changelog
+++ b/debian-11-cockpit/suite/bullseye/debian/changelog
@@ -1,8 +1,17 @@
-cockpit (262-1rcnee0~bullseye+20220205) bullseye; urgency=low
+cockpit (263-1rcnee0~bullseye+20220221) bullseye; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
- -- Robert Nelson <robertcnelson@gmail.com>  Sat, 05 Feb 2022 10:52:24 -0600
+ -- Robert Nelson <robertcnelson@gmail.com>  Mon, 21 Feb 2022 11:07:05 -0600
+
+cockpit (263-1) unstable; urgency=medium
+
+  * New upstream release:
+    - Shell: Fix browser history
+    - Cockpit-Client: Enable forward/back button
+    - debian/copyright: Add node_modules/ (Closes: #1005004)
+
+ -- Martin Pitt <mpitt@debian.org>  Wed, 16 Feb 2022 16:54:51 +0100
 
 cockpit (262-1) unstable; urgency=medium
 
