--- a/bb-beagle-flasher/suite/focal/debian/changelog
+++ b/bb-beagle-flasher/suite/focal/debian/changelog
@@ -1,4 +1,4 @@
-bb-beagle-flasher (1.20220202.3-0~buster+20220301) buster; urgency=low
+bb-beagle-flasher (1.20220202.3-0~focal+20220301) focal; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
