--- a/debian-11-mesa/suite/bullseye/debian/changelog
+++ b/debian-11-mesa/suite/bullseye/debian/changelog
@@ -1,8 +1,15 @@
-mesa (21.3.5-1rcnee0~bullseye+20220211) bullseye; urgency=low
+mesa (21.3.7-1rcnee0~bullseye+20220304) bullseye; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
- -- Robert Nelson <robertcnelson@gmail.com>  Fri, 11 Feb 2022 11:23:20 -0600
+ -- Robert Nelson <robertcnelson@gmail.com>  Fri, 04 Mar 2022 14:09:03 -0600
+
+mesa (21.3.7-1) unstable; urgency=medium
+
+  * New upstream release.
+  * rules: Disable sse2 on i386. (Closes: #1002872)
+
+ -- Timo Aaltonen <tjaalton@debian.org>  Wed, 02 Mar 2022 12:42:09 +0200
 
 mesa (21.3.5-1) unstable; urgency=medium
 
