--- a/SanCloud-Firmware/suite/buster/debian/changelog
+++ b/SanCloud-Firmware/suite/buster/debian/changelog
@@ -1,4 +1,4 @@
-sancloud-firmware (0.1.0.20220309.0-0~bullseye+20220309) bullseye; urgency=low
+sancloud-firmware (0.1.0.20220309.0-0~buster+20220309) buster; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
