--- a/debian-11-mesa/suite/bullseye/debian/changelog
+++ b/debian-11-mesa/suite/bullseye/debian/changelog
@@ -1,23 +1,22 @@
-mesa (21.3.7-1rcnee0~bullseye+20220304) bullseye; urgency=low
+mesa (22.0.0-1rcnee0~bullseye+20220315) bullseye; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
- -- Robert Nelson <robertcnelson@gmail.com>  Fri, 04 Mar 2022 14:09:03 -0600
+ -- Robert Nelson <robertcnelson@gmail.com>  Tue, 15 Mar 2022 08:48:11 -0500
 
-mesa (21.3.7-1) unstable; urgency=medium
-
-  * New upstream release.
-  * rules: Disable sse2 on i386. (Closes: #1002872)
-
- -- Timo Aaltonen <tjaalton@debian.org>  Wed, 02 Mar 2022 12:42:09 +0200
-
-mesa (21.3.5-1) unstable; urgency=medium
+mesa (22.0.0-1) experimental; urgency=medium
 
   * New upstream release.
-  * iris-inter-context-busy-tracking.diff: Fix a regression causing
-    flickering and corruption on Intel. (Closes: #1003987)
 
- -- Timo Aaltonen <tjaalton@debian.org>  Fri, 28 Jan 2022 15:49:51 +0200
+ -- Timo Aaltonen <tjaalton@debian.org>  Sun, 13 Mar 2022 20:46:36 +0200
+
+mesa (22.0.0~rc2-1) experimental; urgency=medium
+
+  * New upstream release candidate.
+  * path_max.diff: Refreshed.
+  * rules: Drop classic drivers (r100, r200, nouveau_vieux, i915, i965).
+
+ -- Timo Aaltonen <tjaalton@debian.org>  Thu, 17 Feb 2022 22:04:03 +0200
 
 mesa (21.3.4-1) unstable; urgency=medium
 
