--- a/bb-customizations/suite/bullseye/debian/install
+++ b/bb-customizations/suite/bullseye/debian/install
@@ -1,4 +1,5 @@
 debian/10-of-symlink.rules /etc/udev/rules.d/
+debian/80-gpio-noroot.rules /etc/udev/rules.d/
 debian/80-i2c-noroot.rules /etc/udev/rules.d/
 debian/82-gpio-config-pin.rules /etc/udev/rules.d/
 debian/85-gpio-noroot.rules /etc/udev/rules.d/
