--- a/debian-11-mesa/suite/bullseye/debian/changelog
+++ b/debian-11-mesa/suite/bullseye/debian/changelog
@@ -1,8 +1,17 @@
-mesa (22.0.0-1rcnee0~bullseye+20220315) bullseye; urgency=low
+mesa (22.0.1-1rcnee0~bullseye+20220330) bullseye; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
- -- Robert Nelson <robertcnelson@gmail.com>  Tue, 15 Mar 2022 08:48:11 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Wed, 30 Mar 2022 12:13:45 -0500
+
+mesa (22.0.1-1) experimental; urgency=medium
+
+  * New upstream release.
+  * rules: Disable lto as suggested by upstream.
+  * revert-enabling-tlsdesc-support.diff: Revert a commit that's causing
+    apps to crash. (LP: #1966221)
+
+ -- Timo Aaltonen <tjaalton@debian.org>  Wed, 30 Mar 2022 11:47:25 +0300
 
 mesa (22.0.0-1) experimental; urgency=medium
 
