--- a/git-mesa/suite/bullseye/debian/changelog
+++ b/git-mesa/suite/bullseye/debian/changelog
@@ -1,8 +1,8 @@
-mesa (22.0.1-1rcnee0~bullseye+20220330) bullseye; urgency=low
+mesa (22.1.0-git20210331.0-0~bullseye+20220331) bullseye; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
- -- Robert Nelson <robertcnelson@gmail.com>  Wed, 30 Mar 2022 12:13:45 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Thu, 31 Mar 2022 08:50:38 -0500
 
 mesa (22.0.1-1) experimental; urgency=medium
 
