--- a/git-mesa/suite/bullseye/debian/changelog
+++ b/git-mesa/suite/bullseye/debian/changelog
@@ -1,3 +1,9 @@
+mesa (22.1.0-git20210331.1-0~bullseye+20220331) bullseye; urgency=low
+
+  * Rebuild for repos.rcn-ee.com
+
+ -- Robert Nelson <robertcnelson@gmail.com>  Thu, 31 Mar 2022 09:14:26 -0500
+
 mesa (22.1.0-git20210331.0-0~bullseye+20220331) bullseye; urgency=low
 
   * Rebuild for repos.rcn-ee.com
