--- a/git-mesa/suite/bullseye/debian/changelog
+++ b/git-mesa/suite/bullseye/debian/changelog
@@ -1,3 +1,9 @@
+mesa (22.1.0-git20210404.0-0~bullseye+20220404) bullseye; urgency=low
+
+  * Rebuild for repos.rcn-ee.com
+
+ -- Robert Nelson <robertcnelson@gmail.com>  Mon, 04 Apr 2022 18:49:17 -0500
+
 mesa (22.1.0-git20210401.0-0~bullseye+20220401) bullseye; urgency=low
 
   * Rebuild for repos.rcn-ee.com
