--- a/git-mesa/suite/bullseye/debian/changelog
+++ b/git-mesa/suite/bullseye/debian/changelog
@@ -1,3 +1,9 @@
+mesa (22.1.0-git20210404.2-0~bullseye+20220405) bullseye; urgency=low
+
+  * Rebuild for repos.rcn-ee.com
+
+ -- Robert Nelson <robertcnelson@gmail.com>  Tue, 05 Apr 2022 09:16:55 -0500
+
 mesa (22.1.0-git20210404.1-0~bullseye+20220405) bullseye; urgency=low
 
   * Rebuild for repos.rcn-ee.com
