--- a/gcc-pru-debian-11-ubuntu-2004/suite/focal/debian/changelog
+++ b/gcc-pru-debian-11-ubuntu-2004/suite/focal/debian/changelog
@@ -1,3 +1,9 @@
+gcc-pru (12.1.0-0rcnee0~focal+20220510) focal; urgency=low
+
+  * Rebuild for repos.rcn-ee.com
+
+ -- Robert Nelson <robertcnelson@gmail.com>  Tue, 10 May 2022 09:51:08 -0500
+
 gcc-pru (12.0.RC.gaeedb00a1a-0rcnee1~focal+20211223) focal; urgency=low
 
   * Rebuild for repos.rcn-ee.com
