--- a/debian-11-mesa/suite/bullseye/debian/changelog
+++ b/debian-11-mesa/suite/bullseye/debian/changelog
@@ -1,8 +1,14 @@
-mesa (22.0.2-1rcnee0~bullseye+20220506) bullseye; urgency=low
+mesa (22.0.3-1rcnee0~bullseye+20220511) bullseye; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
- -- Robert Nelson <robertcnelson@gmail.com>  Fri, 06 May 2022 09:06:10 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Wed, 11 May 2022 08:37:41 -0500
+
+mesa (22.0.3-1) unstable; urgency=medium
+
+  * New upstream release.
+
+ -- Timo Aaltonen <tjaalton@debian.org>  Fri, 06 May 2022 11:53:29 +0300
 
 mesa (22.0.2-1) unstable; urgency=medium
 
