--- a/bb-customizations/suite/focal/debian/install
+++ b/bb-customizations/suite/focal/debian/install
@@ -1,5 +1,6 @@
 debian/10-of-symlink.rules /etc/udev/rules.d/
 debian/80-i2c-noroot.rules /etc/udev/rules.d/
+debian/81-pwm-noroot.rules /etc/udev/rules.d/
 debian/82-gpio-config-pin.rules /etc/udev/rules.d/
 debian/85-gpio-noroot.rules /etc/udev/rules.d/
 debian/86-remoteproc-noroot.rules /etc/udev/rules.d/
