--- a/bb-customizations/suite/buster/debian/install
+++ b/bb-customizations/suite/buster/debian/install
@@ -1,3 +1,4 @@
+debian/bb-symlinks /usr/sbin/
 debian/10-of-symlink.rules /etc/udev/rules.d/
 debian/60-omap-tty.rules /etc/udev/rules.d/
 debian/80-eeprom-noroot.rules /etc/udev/rules.d/
