--- a/bb-customizations/suite/focal/debian/install
+++ b/bb-customizations/suite/focal/debian/install
@@ -1,3 +1,4 @@
+debian/bb-symlinks /usr/sbin/
 debian/10-of-symlink.rules /etc/udev/rules.d/
 debian/80-i2c-noroot.rules /etc/udev/rules.d/
 debian/81-pwm-noroot.rules /etc/udev/rules.d/
