--- a/bb-customizations/suite/bullseye/debian/install
+++ b/bb-customizations/suite/bullseye/debian/install
@@ -4,6 +4,7 @@ debian/80-gpio-noroot.rules /etc/udev/rules.d/
 debian/80-i2c-noroot.rules /etc/udev/rules.d/
 debian/81-pwm-noroot.rules /etc/udev/rules.d/
 debian/82-gpio-config-pin.rules /etc/udev/rules.d/
+debian/83-counter-noroot.rules /etc/udev/rules.d/
 debian/85-gpio-noroot.rules /etc/udev/rules.d/
 debian/86-remoteproc-noroot.rules /etc/udev/rules.d/
 debian/87-iio-noroot.rules /etc/udev/rules.d/
