--- a/bb-customizations/suite/buster/debian/install
+++ b/bb-customizations/suite/buster/debian/install
@@ -6,6 +6,7 @@ debian/80-gpio-noroot.rules /etc/udev/rules.d/
 debian/80-i2c-noroot.rules /etc/udev/rules.d/
 debian/81-pwm-noroot.rules /etc/udev/rules.d/
 debian/82-gpio-config-pin.rules /etc/udev/rules.d/
+debian/83-counter-noroot.rules /etc/udev/rules.d/
 debian/83-eqep-noroot.rules /etc/udev/rules.d/
 debian/85-gpio-noroot.rules /etc/udev/rules.d/
 debian/86-remoteproc-noroot.rules /etc/udev/rules.d/
