dpkg (1.21.1ubuntu2.1rcnee0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/ubuntu-2204-dpkg/suite/jammy/debian/changelog
+++ b/ubuntu-2204-dpkg/suite/jammy/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.21.1ubuntu2.1rcnee0~jammy+20220719) jammy; urgency=low
+
+  * Rebuild for repos.rcn-ee.com
+
+ -- Robert Nelson <robertcnelson@gmail.com>  Tue, 19 Jul 2022 15:21:08 -0500
+
 dpkg (1.21.1ubuntu2.1) jammy-security; urgency=medium
 
   * SECURITY UPDATE: Directory traversal issue in dpkg-source
