--- a/bela-seasocks/suite/bullseye/debian/changelog
+++ b/bela-seasocks/suite/bullseye/debian/changelog
@@ -1,5 +1,6 @@
-seasocks (1.4.4-1) bullseye; urgency=medium
+seasocks (1.4.4-git20220530.0-0~bullseye+20220720) bullseye; urgency=low
 
-  * Initial release (Closes: #nnnn)  <nnnn is the bug number of your ITP>
+  * Rebuild for repos.rcn-ee.com
 
- -- Kurva Prashanth <krvprashanth@riseup.net>  Thu, 14 Jul 2022 10:10:38 +0530
+ -- Robert Nelson <robertcnelson@gmail.com>  Wed, 20 Jul 2022 10:09:03 -0500
+
