seasocks (1.4.4-git20220530.6: install should work
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bela-seasocks/suite/bullseye/debian/install
+++ b/bela-seasocks/suite/bullseye/debian/install
@@ -1,5 +1,5 @@
-/usr/local/lib/cmake/Seasocks/* /usr/lib/cmake/Seasocks/
-/usr/local/share/licenses/Seasocks/LICENSE /usr/share/licenses/Seasocks/LICENSE
-/usr/local/lib/libseasocks.so.1.4.4 /usr/lib/
-/usr/local/lib/libseasocks.so /usr/lib/
-/usr/local/include/seasocks/* /usr/include/seasocks
+build/tmp/lib/cmake/Seasocks/* usr/lib/cmake/Seasocks/
+build/tmp/share/licenses/Seasocks/LICENSE usr/share/licenses/Seasocks/LICENSE
+build/tmp/lib/libseasocks.so.1.4.4 usr/lib/
+build/tmp/lib/libseasocks.so usr/lib/
+build/tmp/include/seasocks/* usr/include/seasocks
