bbb.io-kernel (1.20220720.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/focal/debian/changelog
+++ b/bbb.io-kernel/suite/focal/debian/changelog
@@ -1,4 +1,4 @@
-bbb.io-kernel (1.20220720.0-0~buster+20220720) buster; urgency=low
+bbb.io-kernel (1.20220720.0-0~focal+20220720) focal; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
