--- a/debian-11-libiio/suite/bullseye/debian/changelog
+++ b/debian-11-libiio/suite/bullseye/debian/changelog
@@ -1,8 +1,14 @@
-libiio (0.23-2rcnee0~bullseye+20220217) bullseye; urgency=low
+libiio (0.24-1bbbio0~bullseye+20220720) bullseye; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
- -- Robert Nelson <robertcnelson@gmail.com>  Thu, 17 Feb 2022 13:30:55 -0600
+ -- Robert Nelson <robertcnelson@gmail.com>  Wed, 20 Jul 2022 14:16:08 -0500
+
+libiio (0.24-1) unstable; urgency=medium
+
+  * New upstream release
+
+ -- A. Maitland Bottoms <bottoms@debian.org>  Sun, 10 Jul 2022 12:23:05 -0400
 
 libiio (0.23-2) unstable; urgency=medium
 
