--- a/bbb.io-kernel/suite/jammy/debian/changelog
+++ b/bbb.io-kernel/suite/jammy/debian/changelog
@@ -1,4 +1,4 @@
-bbb.io-kernel (1.20220720.2-0~buster+20220720) buster; urgency=low
+bbb.io-kernel (1.20220720.2-0~jammy+20220720) jammy; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
