bb-u-boot-am57xx-evm (2021.04.20210625.3)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-u-boot-am57xx-evm/suite/jammy/debian/changelog
+++ b/bb-u-boot-am57xx-evm/suite/jammy/debian/changelog
@@ -1,4 +1,4 @@
-bb-u-boot-am57xx-evm (2021.04.20210625.3-0~focal+20220720) focal; urgency=low
+bb-u-boot-am57xx-evm (2021.04.20210625.3-0~jammy+20220720) jammy; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
