bb-beagle-flasher (1.20220727.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-beagle-flasher/suite/jammy/debian/changelog
+++ b/bb-beagle-flasher/suite/jammy/debian/changelog
@@ -1,4 +1,4 @@
-bb-beagle-flasher (1.20220727.0-0~focal+20220727) focal; urgency=low
+bb-beagle-flasher (1.20220727.0-0~jammy+20220727) jammy; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
