--- a/bb-customizations/suite/jammy/debian/changelog
+++ b/bb-customizations/suite/jammy/debian/changelog
@@ -1,4 +1,4 @@
-bb-customizations (1.20220727.0-0~focal+20220727) focal; urgency=low
+bb-customizations (1.20220727.0-0~jammy+20220727) jammy; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
