--- a/SanCloud-Firmware/suite/jammy/debian/changelog
+++ b/SanCloud-Firmware/suite/jammy/debian/changelog
@@ -1,4 +1,4 @@
-sancloud-firmware (0.1.0.20220309.1-0~buster+20220727) buster; urgency=low
+sancloud-firmware (0.1.0.20220309.1-0~jammy+20220727) jammy; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
