--- a/bb-customizations/suite/bullseye/debian/install
+++ b/bb-customizations/suite/bullseye/debian/install
@@ -21,5 +21,9 @@ debian/am57xx-pru2_0-fw.sleep /lib/firmware/
 debian/am57xx-pru2_1-fw.sleep /lib/firmware/
 debian/beaglebg.jpg /usr/share/backgrounds/bbb.io/
 debian/beagleboard-logo.svg /usr/share/backgrounds/bbb.io/
+debian/nginx-autoindex /etc/bbb.io/templates/nginx/
+debian/Node-RED-ui.html /etc/bbb.io/templates/nginx/
+debian/Node-RED.html /etc/bbb.io/templates/nginx/
+debian/VSCode.html /etc/bbb.io/templates/nginx/
 debian/xfce4-desktop.xml /etc/bbb.io/templates/xfce4/
 debian/ssh.service /etc/avahi/services/
