bb-u-boot-am57xx-evm-beta (2022.04.20220803.1)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-u-boot-am57xx-evm-beta/suite/focal/debian/changelog
+++ b/bb-u-boot-am57xx-evm-beta/suite/focal/debian/changelog
@@ -1,4 +1,4 @@
-bb-u-boot-am57xx-evm-beta (2022.04.20220803.1-0~bullseye+20220803) bullseye; urgency=low
+bb-u-boot-am57xx-evm-beta (2022.04.20220803.1-0~focal+20220803) focal; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
