--- a/bb-u-boot-am57xx-evm-beta/suite/jammy/debian/changelog
+++ b/bb-u-boot-am57xx-evm-beta/suite/jammy/debian/changelog
@@ -1,4 +1,4 @@
-bb-u-boot-am57xx-evm-beta (2022.04.20220803.1-0~bullseye+20220803) bullseye; urgency=low
+bb-u-boot-am57xx-evm-beta (2022.04.20220803.1-0~jammy+20220803) jammy; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
