--- a/bela-customizations/suite/bullseye/debian/changelog
+++ b/bela-customizations/suite/bullseye/debian/changelog
@@ -1,5 +1,6 @@
-bela-customizations (1.0.0-1) unstable; urgency=medium
+bela-customizations (1.20220829.0-0~bullseye+20220829) bullseye; urgency=low
 
-  * Initial release (Closes: #nnnn)  <nnnn is the bug number of your ITP>
+  * Rebuild for repos.rcn-ee.com
 
- -- prashanth <krvprashanth@riseup.net>  Fri, 29 Jul 2022 21:51:31 +0530
+ -- Robert Nelson <robertcnelson@gmail.com>  Mon, 29 Aug 2022 15:24:31 -0500
+
