--- a/bela-customizations/suite/bullseye/debian/install
+++ b/bela-customizations/suite/bullseye/debian/install
@@ -1,10 +1,8 @@
 debian/isc-dhcp-server /etc/default/
-debian/dhcpd.conf /etc/dhcp/
 debian/modules.conf /etc/modules-load.d/
 debian/sshd_config /etc/ssh/
 debian/bela /etc/sudoers.d/
 debian/motd /etc/
-debian/securetty /etc/
 debian/bela_button.service /lib/systemd/system/
 debian/bela_flash_emmc.service /lib/systemd/system/
 debian/bela_gadget.service /lib/systemd/system/
@@ -19,3 +17,4 @@ debian/bela_flash_emmc.sh /opt/Bela/
 debian/bela_gadget.sh /opt/Bela/
 debian/bela_mac.sh /opt/Bela/
 debian/bela_startup.sh /opt/Bela/
+debian/bb-start-acm-ncm-rndis-old-gadget /usr/bin/
