--- a/bela-customizations/suite/bullseye/debian/install
+++ b/bela-customizations/suite/bullseye/debian/install
@@ -1,4 +1,4 @@
-debian/modules.conf /etc/modules-load.d/
+debian/bela-modules.conf /etc/modules-load.d/
 debian/sshd_config /etc/ssh/
 debian/bela /etc/sudoers.d/
 debian/motd /etc/
