--- a/bela-customizations/suite/bullseye/debian/install
+++ b/bela-customizations/suite/bullseye/debian/install
@@ -1,7 +1,7 @@
 debian/bela-modules.conf /etc/modules-load.d/
 debian/sshd_config /etc/ssh/
 debian/bela /etc/sudoers.d/
-debian/motd /etc/
+debian/bela-motd /etc/bela/templates/
 debian/bela_button.service /lib/systemd/system/
 debian/bela_flash_emmc.service /lib/systemd/system/
 debian/bela_ide.service /lib/systemd/system/
