--- a/bela-customizations/suite/bullseye/debian/install
+++ b/bela-customizations/suite/bullseye/debian/install
@@ -1,5 +1,5 @@
 debian/bela-modules.conf /etc/modules-load.d/
-debian/sshd_config /etc/ssh/
+debian/bela-sshd_config /etc/bela/templates/
 debian/bela /etc/sudoers.d/
 debian/bela-motd /etc/bela/templates/
 debian/bela_button.service /lib/systemd/system/
