omap5-cpu-pm (0.0-git20220902.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/omap5-cpu-pm/suite/buster/debian/changelog
+++ b/omap5-cpu-pm/suite/buster/debian/changelog
@@ -1,4 +1,4 @@
-omap5-cpu-pm (0.0-git20220902.0-0~bullseye+20220902) bullseye; urgency=low
+omap5-cpu-pm (0.0-git20220902.0-0~buster+20220902) buster; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
