--- a/gnuprumcu-debian-11-ubuntu-2004/suite/focal/debian/changelog
+++ b/gnuprumcu-debian-11-ubuntu-2004/suite/focal/debian/changelog
@@ -1,3 +1,11 @@
+gnuprumcu (0.9.0) focal; urgency=medium
+
+  * Add TDA4VM (J721E) specs and headers.
+  * Add alias macros used by TI examples.
+  * Add AM62x specs.
+
+ -- Dimitar Dimitrov <dimitar@dinux.eu>  Sat, 10 Sep 2022 23:09:42 +0200
+
 gnuprumcu (0.7.0-git20211212.0-0rcnee0~focal+20211224) focal; urgency=low
 
   * Rebuild for repos.rcn-ee.com
