--- a/gnuprumcu/suite/buster/debian/changelog
+++ b/gnuprumcu/suite/buster/debian/changelog
@@ -1,3 +1,11 @@
+gnuprumcu (0.9.0) unstable; urgency=medium
+
+  * Add TDA4VM (J721E) specs and headers.
+  * Add alias macros used by TI examples.
+  * Add AM62x specs.
+
+ -- Dimitar Dimitrov <dimitar@dinux.eu>  Sat, 10 Sep 2022 23:09:42 +0200
+
 gnuprumcu (0.7.0) unstable; urgency=medium
 
   * Add definitions for direct access to __R30 and __R31.
