--- a/debian-11-cockpit/suite/bullseye/debian/changelog
+++ b/debian-11-cockpit/suite/bullseye/debian/changelog
@@ -1,8 +1,28 @@
-cockpit (274-1rcnee0~bullseye+20220804) bullseye; urgency=low
+cockpit (277-1bbbio0~bullseye+20220923) bullseye; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
- -- Robert Nelson <robertcnelson@gmail.com>  Thu, 04 Aug 2022 15:04:35 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Fri, 23 Sep 2022 15:17:24 -0500
+
+cockpit (277-1) unstable; urgency=medium
+
+  * New upstream bug fix release.
+
+ -- Martin Pitt <mpitt@debian.org>  Fri, 23 Sep 2022 06:38:03 +0200
+
+cockpit (276.1-1) unstable; urgency=medium
+
+  * New upstream release:
+    - login: Use valid selectors when testing for :is() / :where() support
+
+ -- Martin Pitt <mpitt@debian.org>  Mon, 12 Sep 2022 14:39:12 +0200
+
+cockpit (276-1) unstable; urgency=medium
+
+  * New upstream release:
+    - shell: Support for alternatives to sudo
+
+ -- Martin Pitt <mpitt@debian.org>  Wed, 07 Sep 2022 10:19:37 +0200
 
 cockpit (274-1) unstable; urgency=medium
 
