linuxcnc (2.9.0~pre0+git20221105.ffb6bda926-1.2bbbio2)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/debian-11-linuxcnc/suite/bullseye/debian/changelog
+++ b/debian-11-linuxcnc/suite/bullseye/debian/changelog
@@ -1,3 +1,9 @@
+linuxcnc (2.9.0~pre0+git20221105.ffb6bda926-1.2bbbio2~bullseye+20221126) bullseye; urgency=low
+
+  * Rebuild for repos.rcn-ee.com
+
+ -- Robert Nelson <robertcnelson@gmail.com>  Sat, 26 Nov 2022 12:38:34 -0600
+
 linuxcnc (2.9.0~pre0+git20221105.ffb6bda926-1.2bbbio0~bullseye+20221126) bullseye; urgency=low
 
   * Rebuild for repos.rcn-ee.com
