bb-wl18xx-firmware (1.20221129.5)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-wl18xx-firmware/suite/bionic/debian/install
+++ b/bb-wl18xx-firmware/suite/bionic/debian/install
@@ -1,8 +1,8 @@
 debian/TIInit_11.8.32.bts /lib/firmware/ti-connectivity/
 debian/wl18xx-conf.bin /lib/firmware/ti-connectivity/
-debian/wl18xx-fw-4.bin /lib/firmware/ti-connectivity/git/
 debian/wl18xx-fw-4-8.9.0.0.79.bin /lib/firmware/ti-connectivity/git/
 debian/wl18xx-fw-4-8.9.0.0.81.bin /lib/firmware/ti-connectivity/git/
+debian/wl18xx-fw-4-8.9.0.0.83.bin /lib/firmware/ti-connectivity/git/
 debian/wl18xx-fw-4-8.9.0.0.84.bin /lib/firmware/ti-connectivity/git/
 debian/wl18xx-fw-4-8.9.0.0.85.bin /lib/firmware/ti-connectivity/git/
 debian/wl18xx-fw-4-8.9.0.0.86.bin /lib/firmware/ti-connectivity/git/
