--- a/bb-wl18xx-firmware/suite/buster/debian/install
+++ b/bb-wl18xx-firmware/suite/buster/debian/install
@@ -15,3 +15,4 @@ debian/bb-wl18xx-bluetooth.service /lib/systemd/system/
 debian/bb-wl18xx-wlan0 /usr/bin/
 debian/bb-wl18xx-wlan0.service /lib/systemd/system/
 debian/bb-wl18xx-tether /usr/bin/
+debian/bb-wl18xx-select-fw /usr/sbin/
