bb-wl18xx-firmware (1.20221201.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-wl18xx-firmware/suite/bionic/debian/install
+++ b/bb-wl18xx-firmware/suite/bionic/debian/install
@@ -7,6 +7,9 @@ debian/wl18xx-fw-4-8.9.0.0.84.bin /lib/firmware/ti-connectivity/git/
 debian/wl18xx-fw-4-8.9.0.0.85.bin /lib/firmware/ti-connectivity/git/
 debian/wl18xx-fw-4-8.9.0.0.86.bin /lib/firmware/ti-connectivity/git/
 debian/wl18xx-fw-4-8.9.0.0.88.bin /lib/firmware/ti-connectivity/git/
+debian/wl18xx-fw-4-8.9.0.0.89.bin /lib/firmware/ti-connectivity/git/
+debian/wl18xx-fw-4-8.9.0.0.90.bin /lib/firmware/ti-connectivity/git/
+debian/wl18xx-fw-4-8.9.1.0.0.bin /lib/firmware/ti-connectivity/git/
 debian/btwilink-blacklist.conf /etc/modprobe.d/
 debian/wl18xx.conf /etc/modprobe.d/
 debian/bb-fixup-bluetooth /usr/bin/
