--- a/debian-10-bone101/suite/buster/debian/changelog
+++ b/debian-10-bone101/suite/buster/debian/changelog
@@ -1,3 +1,9 @@
+bone101 (2.1.3-0rcnee14~buster+20221228) buster; urgency=low
+
+  * Rebuild for repos.rcn-ee.com
+
+ -- Robert Nelson <robertcnelson@gmail.com>  Wed, 28 Dec 2022 10:16:28 -0600
+
 bone101 (2.1.3-0rcnee13~buster+20200713) buster; urgency=low
 
   * Rebuild for repos.rcn-ee.com
