--- a/debian-11-wpa/suite/bullseye/debian/changelog
+++ b/debian-11-wpa/suite/bullseye/debian/changelog
@@ -1,3 +1,9 @@
+wpa (2:2.10-11bbbio2~bullseye+20230203) bullseye; urgency=low
+
+  * Rebuild for repos.rcn-ee.com
+
+ -- Robert Nelson <robertcnelson@gmail.com>  Fri, 03 Feb 2023 12:12:05 -0600
+
 wpa (2:2.10-11bbbio1~bullseye+20230203) bullseye; urgency=low
 
   * Rebuild for repos.rcn-ee.com
