bb-node-red-installer (3.0.2.3) [force node-red to use local copy of node/npm]
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-node-red-installer-debian-11/suite/bullseye/debian/changelog
+++ b/bb-node-red-installer-debian-11/suite/bullseye/debian/changelog
@@ -1,6 +1,6 @@
-bb-node-red-installer (3.0.2.2-0~bullseye+20220810) bullseye; urgency=low
+bb-node-red-installer (3.0.2.3-0~bullseye+20230302) bullseye; urgency=low
 
-  * Rebuild for repos.rcn-ee.com
+  * force node-red to use local copy of node/npm
 
- -- Robert Nelson <robertcnelson@gmail.com>  Wed, 10 Aug 2022 10:57:33 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Thu, 02 Mar 2023 18:12:11 -0600
 
