bbb.io-keyring (1.20230414.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-keyring/suite/bookworm/debian/changelog
+++ b/bbb.io-keyring/suite/bookworm/debian/changelog
@@ -1,4 +1,4 @@
-bbb.io-keyring (1.20230414.0-0~focal+20230414) focal; urgency=low
+bbb.io-keyring (1.20230414.0-0~bookworm+20230414) bookworm; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
