--- a/bbb.io-keyring/suite/jammy/debian/changelog
+++ b/bbb.io-keyring/suite/jammy/debian/changelog
@@ -1,4 +1,4 @@
-bbb.io-keyring (1.20230414.0-0~focal+20230414) focal; urgency=low
+bbb.io-keyring (1.20230414.0-0~jammy+20230414) jammy; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
