bb-bbai-firmware (1.20230414.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-bbai-firmware/suite/jammy/debian/changelog
+++ b/bb-bbai-firmware/suite/jammy/debian/changelog
@@ -1,4 +1,4 @@
-bb-bbai-firmware (1.20230414.0-0~buster+20230414) buster; urgency=low
+bb-bbai-firmware (1.20230414.0-0~jammy+20230414) jammy; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
