--- a/bb-bbai-firmware/suite/bookworm/debian/changelog
+++ b/bb-bbai-firmware/suite/bookworm/debian/changelog
@@ -1,4 +1,4 @@
-bb-bbai-firmware (1.20230414.0-0~buster+20230414) buster; urgency=low
+bb-bbai-firmware (1.20230414.0-0~bookworm+20230414) bookworm; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
