--- a/bb-beagle-config/suite/jammy/debian/changelog
+++ b/bb-beagle-config/suite/jammy/debian/changelog
@@ -1,4 +1,4 @@
-bb-beagle-config (0.1.0.20220611.1-0~focal+20230414) focal; urgency=low
+bb-beagle-config (0.1.0.20220611.1-0~jammy+20230414) jammy; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
