bb-beagle-version (1.20230414.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-beagle-version/suite/bookworm/debian/changelog
+++ b/bb-beagle-version/suite/bookworm/debian/changelog
@@ -1,4 +1,4 @@
-bb-beagle-version (1.20230414.0-0~buster+20230414) buster; urgency=low
+bb-beagle-version (1.20230414.0-0~bookworm+20230414) bookworm; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
