--- a/bb-beagle-version/suite/jammy/debian/changelog
+++ b/bb-beagle-version/suite/jammy/debian/changelog
@@ -1,4 +1,4 @@
-bb-beagle-version (1.20230414.0-0~buster+20230414) buster; urgency=low
+bb-beagle-version (1.20230414.0-0~jammy+20230414) jammy; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
