generic-sys-mods (1.20230414.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/generic-sys-mods/suite/bookworm/debian/changelog
+++ b/generic-sys-mods/suite/bookworm/debian/changelog
@@ -1,4 +1,4 @@
-generic-sys-mods (1.20230414.0-0~bullseye+20230414) bullseye; urgency=low
+generic-sys-mods (1.20230414.0-0~bookworm+20230414) bookworm; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
