--- a/generic-sys-mods/suite/jammy/debian/changelog
+++ b/generic-sys-mods/suite/jammy/debian/changelog
@@ -1,4 +1,4 @@
-generic-sys-mods (1.20230414.0-0~bullseye+20230414) bullseye; urgency=low
+generic-sys-mods (1.20230414.0-0~jammy+20230414) jammy; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
