--- a/git-libusbgx/suite/jammy/debian/changelog
+++ b/git-libusbgx/suite/jammy/debian/changelog
@@ -1,4 +1,4 @@
-libusbgx (0.2.0-git20210811.5-0~focal+20230414) focal; urgency=low
+libusbgx (0.2.0-git20210811.5-0~jammy+20230414) jammy; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
