--- a/git-gt/suite/jammy/debian/changelog
+++ b/git-gt/suite/jammy/debian/changelog
@@ -1,4 +1,4 @@
-gt (0.0.0-git20220507.1-0~focal+20230414) focal; urgency=low
+gt (0.0.0-git20220507.1-0~jammy+20230414) jammy; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
