--- a/git-gt/suite/bookworm/debian/changelog
+++ b/git-gt/suite/bookworm/debian/changelog
@@ -1,4 +1,4 @@
-gt (0.0.0-git20220507.1-0~focal+20230414) focal; urgency=low
+gt (0.0.0-git20220507.1-0~bookworm+20230414) bookworm; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
