--- a/bb-wl18xx-firmware/suite/bookworm/debian/changelog
+++ b/bb-wl18xx-firmware/suite/bookworm/debian/changelog
@@ -1,4 +1,4 @@
-bb-wl18xx-firmware (1.20230414.0-0~bullseye+20230414) bullseye; urgency=low
+bb-wl18xx-firmware (1.20230414.0-0~bookworm+20230414) bookworm; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
