bb-wlan0-defaults (1.20230414.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-wlan0-defaults/suite/jammy/debian/changelog
+++ b/bb-wlan0-defaults/suite/jammy/debian/changelog
@@ -1,4 +1,4 @@
-bb-wlan0-defaults (1.20230414.0-0~focal+20230414) focal; urgency=low
+bb-wlan0-defaults (1.20230414.0-0~jammy+20230414) jammy; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
