--- a/bb-wlan0-defaults/suite/bookworm/debian/changelog
+++ b/bb-wlan0-defaults/suite/bookworm/debian/changelog
@@ -1,4 +1,4 @@
-bb-wlan0-defaults (1.20230414.0-0~focal+20230414) focal; urgency=low
+bb-wlan0-defaults (1.20230414.0-0~bookworm+20230414) bookworm; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
