--- a/bbb.io-kernel/suite/bookworm/debian/changelog
+++ b/bbb.io-kernel/suite/bookworm/debian/changelog
@@ -1,4 +1,4 @@
-bbb.io-kernel (1.20230426.1-0~focal+20230426) focal; urgency=low
+bbb.io-kernel (1.20230426.1-0~bookworm+20230426) bookworm; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
