rcnee-internal-testlab (1.20230519.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/rcnee-internal-testlab/suite/bookworm/debian/changelog
+++ b/rcnee-internal-testlab/suite/bookworm/debian/changelog
@@ -1,4 +1,4 @@
-rcnee-internal-testlab (1.20230519.0-0~bullseye+20230519) bullseye; urgency=low
+rcnee-internal-testlab (1.20230519.0-0~bookworm+20230519) bookworm; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
