bb-code-server (4.13.0.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-code-server/suite/bookworm/debian/changelog
+++ b/bb-code-server/suite/bookworm/debian/changelog
@@ -1,4 +1,4 @@
-bb-code-server (4.13.0.0-0~buster+20230522) buster; urgency=low
+bb-code-server (4.13.0.0-0~bookworm+20230522) bookworm; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
