Update GNU PRU toolchain
The updates are necessary to support PRUs on BeaglePlay and BBAI64.

 * gnuprumcu v0.9.4, with support for AM62x and TDA4VM.
 * GCC 13.2.0
 * Binutils 2.41

Signed-off-by: Dimitar Dimitrov <dimitar@dinux.eu>

--- a/binutils-pru/suite/bullseye/debian/changelog
+++ b/binutils-pru/suite/bullseye/debian/changelog
@@ -1,3 +1,9 @@
+binutils-pru (2.41-0rcnee5~bullseye+20230731) bullseye; urgency=low
+
+  * Binutils 2.41.
+
+ -- Dimitar Dimitrov <dimitar@dinux.eu>  Mon, 31 Jul 2023 21:14:12 +0200
+
 binutils-pru (2.38-0rcnee4~bionic+20200321) bullseye; urgency=low
 
   * Binutils 2.38 official release.
