--- a/gcc-pru/suite/bionic/debian/changelog
+++ b/gcc-pru/suite/bionic/debian/changelog
@@ -1,3 +1,9 @@
+gcc-pru (13.2.0-0rcnee0~bullseye+20230731) bionic; urgency=low
+
+  * Bump to GCC mainline 13.2.0
+
+ -- Dimitar Dimitrov <dimitar@dinux.eu>  Mon, 31 Jul 2023 22:59:11 +0200
+
 gcc-pru (12.0.RC.gaeedb00a1a-0rcnee2~bionic+20200903) bionic; urgency=low
 
   * Bump to GCC mainline commit aeedb00a1ae2ccd10b1a5f00ff466081aeadb54b.
