--- a/gnuprumcu/suite/bullseye/debian/changelog
+++ b/gnuprumcu/suite/bullseye/debian/changelog
@@ -1,3 +1,14 @@
+gnuprumcu (0.9.4) unstable; urgency=medium
+
+  * Add I/O header for am62x.
+  * Fix bit field length in AM572x's SPP register.
+  * Add linker commands to align sections.
+  * Add TDA4VM (J721E) specs and headers.
+  * Add alias macros used by TI examples.
+  * Add AM62x specs.
+
+ -- Dimitar Dimitrov <dimitar@dinux.eu>  Fri, 26 May 2023 22:16:58 +0200
+
 gnuprumcu (0.7.0) unstable; urgency=medium
 
   * Add definitions for direct access to __R30 and __R31.
