bb-customizations (1.20230530.0) - 86-rpmsg-noroot.rules udev rule
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-customizations/suite/bookworm/debian/changelog
+++ b/bb-customizations/suite/bookworm/debian/changelog
@@ -1,4 +1,4 @@
-bb-customizations (1.20230530.0-0~bionic+20230530) bionic; urgency=low
+bb-customizations (1.20230530.0-0~bookworm+20230530) bookworm; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
