dpkg (1.21.1ubuntu2.2rcnee1)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/ubuntu-2204-dpkg/suite/jammy/debian/changelog
+++ b/ubuntu-2204-dpkg/suite/jammy/debian/changelog
@@ -1,9 +1,18 @@
-dpkg (1.21.1ubuntu2.1rcnee3~jammy+20220719) jammy; urgency=low
+dpkg (1.21.1ubuntu2.2rcnee1~jammy+20230701) jammy; urgency=low
 
   * Rebuild for repos.rcn-ee.com
   * revert to xz by default (reprepro)
 
- -- Robert Nelson <robertcnelson@gmail.com>  Tue, 19 Jul 2022 16:13:04 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Sat, 01 Jul 2023 14:36:46 -0500
+
+dpkg (1.21.1ubuntu2.2) jammy; urgency=medium
+
+  * Cherry-pick 940f86c37f9f from dpkg.git (LP: #1960582)
+    [ Guillem Jover ]
+    - debian: Ignore directories for the alternatives state fixup
+      (Closes: #1001695)
+
+ -- Chengen Du <chengen.du@canonical.com>  Sat, 01 Apr 2023 21:43:42 +0800
 
 dpkg (1.21.1ubuntu2.1) jammy-security; urgency=medium
 
