bbb.io-kernel (1.20230705.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/trixie/debian/changelog
+++ b/bbb.io-kernel/suite/trixie/debian/changelog
@@ -1,6 +1,6 @@
-bbb.io-kernel (1.20230613.0-0~bookworm+20230613) bookworm; urgency=low
+bbb.io-kernel (1.20230705.0-0~trixie+20230705) trixie; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
- -- Robert Nelson <robertcnelson@gmail.com>  Tue, 13 Jun 2023 16:27:40 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Wed, 05 Jul 2023 11:31:53 -0500
 
