bbb.io-kernel (1.20230705.1)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/buster/debian/changelog
+++ b/bbb.io-kernel/suite/buster/debian/changelog
@@ -1,4 +1,4 @@
-bbb.io-kernel (1.20230705.1-0~bookworm+20230705) bookworm; urgency=low
+bbb.io-kernel (1.20230705.1-0~buster+20230705) buster; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
