bb-code-server (4.14.1.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-code-server/suite/trixie/debian/changelog
+++ b/bb-code-server/suite/trixie/debian/changelog
@@ -1,4 +1,4 @@
-bb-code-server (4.14.1.0-0~bullseye+20230705) bullseye; urgency=low
+bb-code-server (4.14.1.0-0~trixie+20230705) trixie; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
