--- a/bb-code-server/suite/jammy/debian/changelog
+++ b/bb-code-server/suite/jammy/debian/changelog
@@ -1,4 +1,4 @@
-bb-code-server (4.14.1.0-0~bullseye+20230705) bullseye; urgency=low
+bb-code-server (4.14.1.0-0~jammy+20230705) jammy; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
