bb-beagle-flasher (1.20230710.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-beagle-flasher/suite/bookworm/debian/changelog
+++ b/bb-beagle-flasher/suite/bookworm/debian/changelog
@@ -1,4 +1,4 @@
-bb-beagle-flasher (1.20230710.0-0~bullseye+20230710) bullseye; urgency=low
+bb-beagle-flasher (1.20230710.0-0~bookworm+20230710) bookworm; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
