--- a/bbb.io-kernel/suite/bookworm/debian/changelog
+++ b/bbb.io-kernel/suite/bookworm/debian/changelog
@@ -1,6 +1,20 @@
-bbb.io-kernel (1.20230711.0-0~bookworm+20230711) bookworm; urgency=low
+bbb.io-kernel (1.20230714.0-0~bookworm+20230714) bookworm; urgency=low
 
-  * Rebuild for repos.rcn-ee.com
+  * Kernel Updates
+  * linux-image-4.19.94-ti-r74
+  * linux-image-4.19.94-ti-rt-r74
+  * linux-image-5.10.168-ti-r64
+  * linux-image-5.10.168-ti-rt-r64
+  * linux-image-5.4.106-ti-r42
+  * linux-image-5.4.106-ti-rt-r42
+  * linux-image-6.1.33-ti-r6
+  * linux-image-6.1.33-ti-rt-r6
+  * linux-image-6.1.38-bone21
+  * linux-image-6.1.38-bone-rt-r21
+  * linux-image-6.2.16-bone12
+  * linux-image-6.3.13-bone13
+  * linux-image-6.4.3-bone11
+  * linux-image-6.5.0-rc1-bone1
 
- -- Robert Nelson <robertcnelson@gmail.com>  Tue, 11 Jul 2023 10:32:14 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Fri, 14 Jul 2023 09:13:30 -0500
 
