--- a/bb-customizations/suite/buster/debian/changelog
+++ b/bb-customizations/suite/buster/debian/changelog
@@ -1,6 +1,6 @@
-bb-customizations (1.20230530.0-0~buster+20230530) buster; urgency=low
+bb-customizations (1.20230714.0-0~buster+20230714) buster; urgency=low
 
-  * Rebuild for repos.rcn-ee.com
+  * Make sure to run depmod -a after linux-image install
 
- -- Robert Nelson <robertcnelson@gmail.com>  Tue, 30 May 2023 13:10:44 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Fri, 14 Jul 2023 17:36:46 -0500
 
