--- a/bbb.io-kernel/suite/trixie/debian/changelog
+++ b/bbb.io-kernel/suite/trixie/debian/changelog
@@ -1,15 +1,7 @@
-bbb.io-kernel (1.20230715.0-0~trixie+20230715) trixie; urgency=low
+bbb.io-kernel (1.20230718.0-0~trixie+20230718) trixie; urgency=low
 
   * Kernel Updates
-  * linux-image-5.10.186-bone75
-  * linux-image-5.10.186-bone-rt-r75
-  * linux-image-5.15.119-bone39
-  * linux-image-5.15.119-bone-rt-r39
-  * linux-image-6.1.38-bone22
-  * linux-image-6.1.38-bone-rt-r22
-  * linux-image-6.2.16-bone13
-  * linux-image-6.3.13-bone14
-  * linux-image-6.4.3-bone12
+  * linux-image-6.5.0-rc2-bone2
 
- -- Robert Nelson <robertcnelson@gmail.com>  Sat, 15 Jul 2023 14:27:40 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Tue, 18 Jul 2023 09:56:21 -0500
 
