bbb.io-kernel (1.20230720.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/jammy/debian/changelog
+++ b/bbb.io-kernel/suite/jammy/debian/changelog
@@ -1,8 +1,10 @@
-bbb.io-kernel (1.20230719.0-0~jammy+20230719) jammy; urgency=low
+bbb.io-kernel (1.20230720.0-0~jammy+20230720) jammy; urgency=low
 
   * Kernel Updates
-  * linux-image-6.1.33-ti-r7
-  * linux-image-6.1.33-ti-rt-r7
+  * linux-image-5.10.186-bone76
+  * linux-image-5.10.186-bone-rt-r76
+  * linux-image-5.15.119-bone40
+  * linux-image-5.15.119-bone-rt-r40
 
- -- Robert Nelson <robertcnelson@gmail.com>  Wed, 19 Jul 2023 11:34:49 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Thu, 20 Jul 2023 10:22:08 -0500
 
