--- a/bb-customizations/suite/bookworm/debian/changelog
+++ b/bb-customizations/suite/bookworm/debian/changelog
@@ -1,6 +1,7 @@
-bb-customizations (1.20230714.0-0~bookworm+20230714) bookworm; urgency=low
+bb-customizations (1.20230720.0-0~bookworm+20230720) bookworm; urgency=low
 
-  * Make sure to run depmod -a after linux-image install
+  * 20230714: Make sure to run depmod -a after linux-image install
+  * 20230720: Starting with v6.5-rc1, overlays are dumpped into the base directory, work around that.
 
- -- Robert Nelson <robertcnelson@gmail.com>  Fri, 14 Jul 2023 17:36:46 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Thu, 20 Jul 2023 15:55:44 -0500
 
