bbb.io-kernel (1.20230722.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/focal/debian/changelog
+++ b/bbb.io-kernel/suite/focal/debian/changelog
@@ -1,10 +1,11 @@
-bbb.io-kernel (1.20230720.0-0~focal+20230720) focal; urgency=low
+bbb.io-kernel (1.20230722.0-0~focal+20230722) focal; urgency=low
 
   * Kernel Updates
-  * linux-image-5.10.186-bone76
-  * linux-image-5.10.186-bone-rt-r76
-  * linux-image-5.15.119-bone40
-  * linux-image-5.15.119-bone-rt-r40
+  * linux-image-5.10.168-ti-r65
+  * linux-image-5.10.168-ti-rt-r65
+  * linux-image-5.19.17-bone17
+  * linux-image-6.1.38-bone23
+  * linux-image-6.1.38-bone-rt-r23
 
- -- Robert Nelson <robertcnelson@gmail.com>  Thu, 20 Jul 2023 10:22:08 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Sat, 22 Jul 2023 13:26:36 -0500
 
