--- a/bbb.io-kernel/suite/buster/debian/changelog
+++ b/bbb.io-kernel/suite/buster/debian/changelog
@@ -1,11 +1,16 @@
-bbb.io-kernel (1.20230720.0-0~buster+20230720) buster; urgency=low
+bbb.io-kernel (1.20230722.0-0~buster+20230722) buster; urgency=low
 
   * Kernel Updates
-  * linux-image-5.10.186-bone76
-  * linux-image-5.10.186-bone-rt-r76
-  * linux-image-5.14.21-bone31
-  * linux-image-5.15.119-bone40
-  * linux-image-5.15.119-bone-rt-r40
+  * linux-image-5.10.168-ti-r65
+  * linux-image-5.10.168-ti-rt-r65
+  * linux-image-5.16.20-bone28
+  * linux-image-5.17.15-bone19
+  * linux-image-5.18.19-bone15
+  * linux-image-5.19.17-bone17
+  * linux-image-6.0.19-bone14
+  * linux-image-6.1.38-bone23
+  * linux-image-6.1.38-bone-rt-r23
+  * linux-image-6.5.0-rc2-bone3
 
- -- Robert Nelson <robertcnelson@gmail.com>  Thu, 20 Jul 2023 10:22:08 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Sat, 22 Jul 2023 13:26:36 -0500
 
