bb-code-server (4.15.0.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-code-server/suite/buster/debian/changelog
+++ b/bb-code-server/suite/buster/debian/changelog
@@ -1,6 +1,9 @@
-bb-code-server (4.14.1.0-0~buster+20230705) buster; urgency=low
+bb-code-server (4.15.0.0-0~buster+20230723) buster; urgency=low
 
-  * Rebuild for repos.rcn-ee.com
+  * Changed
+  * --Updated to Code 1.80.1.
+  * Added
+  * --trusted-origin flag for specifying origins that you trust but do not control (for example a reverse proxy).
 
- -- Robert Nelson <robertcnelson@gmail.com>  Wed, 05 Jul 2023 22:24:25 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Sun, 23 Jul 2023 14:03:37 -0500
 
