bb-code-server (4.16.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-code-server/suite/trixie/debian/changelog
+++ b/bb-code-server/suite/trixie/debian/changelog
@@ -1,9 +1,11 @@
-bb-code-server (4.15.0.0-0~trixie+20230723) trixie; urgency=low
+bb-code-server (4.16.0.0-0~trixie+20230729) trixie; urgency=low
 
+  * Debian Bookworm 12, forced to disable --cert to get code-server to start -> https://github.com/coder/code-server/issues/5162
   * Changed
   * --Updated to Code 1.80.1.
   * Added
   * --trusted-origin flag for specifying origins that you trust but do not control (for example a reverse proxy).
+  * --disable-proxy flag. This disables the domain and path proxies but it does not disable the ports panel in Code. That can be disabled by using remote.autoForwardPorts=false in your settings.
 
- -- Robert Nelson <robertcnelson@gmail.com>  Sun, 23 Jul 2023 14:03:37 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Sat, 29 Jul 2023 09:48:12 -0500
 
