bbb.io-kernel (1.20230801.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/jammy/debian/changelog
+++ b/bbb.io-kernel/suite/jammy/debian/changelog
@@ -1,8 +1,9 @@
-bbb.io-kernel (1.20230728.0-0~jammy+20230728) jammy; urgency=low
+bbb.io-kernel (1.20230801.0-0~jammy+20230801) jammy; urgency=low
 
   * Kernel Updates
-  * linux-image-5.10.168-ti-r66
-  * linux-image-5.10.168-ti-rt-r66
+  * linux-image-5.10.168-ti-r68
+  * linux-image-5.10.168-ti-rt-r68
+  * linux-image-6.5.0-rc4-bone4
 
- -- Robert Nelson <robertcnelson@gmail.com>  Fri, 28 Jul 2023 11:43:00 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Tue, 01 Aug 2023 09:14:15 -0500
 
