bb-u-boot-am57xx-evm (2022.04.20220823.1)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-u-boot-am57xx-evm/suite/bookworm/debian/changelog
+++ b/bb-u-boot-am57xx-evm/suite/bookworm/debian/changelog
@@ -1,4 +1,4 @@
-bb-u-boot-am57xx-evm (2022.04.20220823.1-0~jammy+20230804) jammy; urgency=low
+bb-u-boot-am57xx-evm (2022.04.20220823.1-0~bookworm+20230804) bookworm; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
